present list of projects in maui
