# MycoMate.Api/Contracts/Requests/RecipeIngredientRequest.cs
@@ -1,3 +1,3 @@
 namespace MycoMate.Api.Contracts.Requests;
 
-public record RecipeIngredientRequest(Guid IngredientId, decimal Amount);
+public record RecipeIngredientRequest(Guid IngredientId, decimal WetAmount);
